add html report